fixed and added datagen for configured & placed features and for biome modifiers